--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -31,11 +31,18 @@
         android:icon="@drawable/ic_baseline_battery_charging_full_24"
         app:showAsAction="ifRoom"/>
 
-    <item
+    <!--<item
         android:id="@+id/action_help"
         android:enabled="true"
         android:title="Помощь"
         android:icon="@drawable/ic_baseline_help_24"
+        app:showAsAction="ifRoom"/>-->
+
+    <item
+        android:id="@+id/action_weather"
+        android:enabled="true"
+        android:title="Погода"
+        android:icon="@drawable/ic_baseline_cloud_queue_24"
         app:showAsAction="ifRoom"/>
 
 </menu>
