--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CustomTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">#28742f</item>
+        <item name="colorPrimaryDark">#2c9439</item>
+        <item name="colorAccent">#2fb443</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+
 </resources>
